# CS-Crossover-Grid

./: .gitignore  README.md
.github/workflows/: rust.yml
cs_crossover_grid/: Cargo.toml
cs_crossover_grid/dataset/: hltv_playerStats-complete.txt
cs_crossover_grid/src/: api.rs  main.rs  player.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
