[package]
name = "cs_crossover_grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
fern = "0.6.2"
humantime = "2.1.0"
json = "0.12.4"
log = "0.4.20"
serde = "1.0.183"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]
